# sabrina_test

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
docker/: Dockerfile.dev
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-sabrina_test_start.py2.ipynb
sabrina_test/dataset/: make_dataset.py
sabrina_test/features/: build_features.py
sabrina_test/models/: check.py  confusion_matrix.py  deepaas_api.py  plotresults.py  predict.py  process_sequence_fasta.py  sequence2vector.py  test.py  train_model.py  train_model_1D.py
sabrina_test/tests/: test_unit_model.py
sabrina_test/visualization/: visualize.py
