[metadata]
name = sabrina_test
summary = A short description of the project.
description-file =
    README.md
author = sabrina
author-email =     carlos.garcia@helmholtz-muenchen.de 
version = 1.1.1
license = No license file
home-page = https://github.com/charlos1204/sabrina_test
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    sabrina_test

[entry_points]

deepaas.model = 
    sabrina_test = sabrina_test.models.deepaas_api

